--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground font-inter overflow-x-hidden;
+    @apply bg-lightBg text-foreground font-inter overflow-x-hidden;
   }
 }
 
